<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/backapka"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="magisterka.apmagisterka.MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="exitButton"
        android:text="@string/exitButton"
        android:textColor="@android:color/background_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="?attr/colorPrimary"
        android:onClick="onClickStoper"
        android:text="@string/stoperButton"
        android:textColor="@android:color/background_light"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/button10"
        android:layout_alignStart="@+id/button10" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="onClickCwiczenia"
        android:text="@string/buttonCwiczenia"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/button2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/button4"

        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="onClickAparat"
        android:text="@string/buttonZdjecie"
        android:textColor="@android:color/background_light"


        android:layout_below="@+id/button10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="onClickBmi"
        android:text="@string/buttonBmi"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="onItemClickExamples"
        android:text="@string/buttonPrzyklady"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/button5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button10"
        android:layout_width="120dp"
        android:layout_height="wrap_content"

        android:background="@color/colorPrimary"
        android:onClick="onClickNotePad"
        android:text="@string/notatnik"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp" />
</RelativeLayout>

