<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="magisterka.apmagisterka.BmiActivity"
    android:id="@+id/d">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:id="@+id/textView3" />

    <Button
        android:onClick="onClickBmiLicz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBmiOblicz"
        android:id="@+id/button6"
        android:layout_below="@+id/bmiResult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <Button
        android:onClick="clickFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStoperBack"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiWeight"
        android:id="@+id/textView2"
        android:layout_marginTop="73dp"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textIsSelectable="false"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiHeight"
        android:id="@+id/textView4"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Waga"
        android:inputType="numberDecimal"
        android:id="@+id/editText"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Wzrost"
        android:inputType="numberDecimal"
        android:layout_below="@+id/textView4"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:id="@+id/editText2" />

    <TextView
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:id="@+id/bmiResult"

        android:text="@string/bmiResultHint"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button7"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6" />

    <TextView
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:text="@string/interpretationBmi"
        android:textSize="15dp"
        android:textColor="@color/abc_input_method_navigation_guard"
        android:id="@+id/textView5"
        android:layout_below="@+id/bmiResult"
        android:layout_alignLeft="@+id/bmiResult"
        android:layout_alignStart="@+id/bmiResult"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7"
        android:layout_above="@+id/button8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/button8"
        android:onClick="resetLicznik"
        android:layout_alignTop="@+id/button6"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7" />

</RelativeLayout>
